--- a/library-app/apps/library-app/src/app/app.component.html
+++ b/library-app/apps/library-app/src/app/app.component.html
@@ -39,7 +39,7 @@
       </div>
       <div class="form-group">
         <label for="">Rating</label>
-        <input type="text" class="form-control">
+        <lib-country-selector></lib-country-selector>
       </div>
 
       <button class="btn btn-primary mt-3" type="submit">
@@ -49,6 +49,5 @@
   </div>
 </div>
 
-<lib-rating-component></lib-rating-component>
 
 <router-outlet></router-outlet>
