--- a/library-app/libs/gov-form-controls/src/lib/country-selector/country-selector.component.html
+++ b/library-app/libs/gov-form-controls/src/lib/country-selector/country-selector.component.html
@@ -1,6 +1,7 @@
 <div>
   @for (country of countries(); track $index) {
-  <button class="flex flex-col item-center rounded-md border p-2 relative" type="button">
+  <button [disabled]="disabled()" class="flex flex-col item-center rounded-md border p-2 relative" type="button"
+    (click)="selectCountry(country.code)" [class.selected]="!disabled() && selected() === country.code">
 
     <img [src]="country.code | flagUrlPipe" alt="">
 
